# fleet-os

./: .dockerignore  .gitignore  .golangci.yml  AGENTS.md  LICENSE  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  pyproject.toml
.github/workflows/: ci.yml
deploy/compose/: README.md  dev.yml
docs/: PLAN.md
docs/adr/: 0001-monorepo.md  0002-mqtt-protobuf-boundary.md  0003-sim-backend.md
proto/fleetos/v1/: command.proto  common.proto  telemetry.proto
robot/: README.md
robot/agent/: Dockerfile
robot/src/fleetos_robot/: __init__.py
robot/src/fleetos_robot/agent/: __init__.py  config.py  main.py  publisher.py  runtime.py
robot/src/fleetos_robot/backends/: __init__.py  base.py  lite.py
services/telemetry-ingester/: Dockerfile  README.md
services/telemetry-ingester/cmd/telemetry-ingester/: main.go
services/telemetry-ingester/internal/config/: config.go  config_test.go
services/telemetry-ingester/internal/health/: readiness.go  readiness_test.go
services/telemetry-ingester/internal/httpserver/: server.go  server_test.go
services/telemetry-ingester/internal/ingest/: handler.go  handler_test.go
services/telemetry-ingester/internal/source/: mqtt.go
services/telemetry-ingester/internal/stream/: kafka.go
tests/integration/: assert_redpanda.py  assert_telemetry.py  run-lite.sh
tests/unit/: test_agent.py  test_lite_backend.py  test_publisher.py
